--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "enzyme": "^2.7.1",
+    "jest-enzyme": "^2.1.2",
     "react-addons-test-utils": "^15.4.2",
     "react-scripts": "0.9.5"
   },
